--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/table": "^2.2.2",
     "@hookform/resolvers": "^3.1.1",
+    "@mantine/core": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -39,7 +41,6 @@
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
-    "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -59,6 +60,9 @@
     "@editorjs/link": "^2.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/editorjs__header": "^2.6.0",
+    "postcss": "^8.4.26",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.0.0"
   }
 }
