--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.2.0",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
