--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
@@ -62,6 +63,7 @@
     "@editorjs/link": "^2.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/editorjs__header": "^2.6.0",
+    "@types/lodash.debounce": "^4.0.7",
     "postcss": "^8.4.26",
     "postcss-preset-mantine": "^1.7.0",
     "postcss-simple-vars": "^7.0.1",
