--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "uploadthing": "^5.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@editorjs/code": "^2.8.0",
