--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.15.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
