--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "13.4.10",
     "next-auth": "^4.22.1",
     "node": "^20.5.0",
+    "postinstall": "^0.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
