Edited database key

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://os6w3gh2brtzcaaqz1sz:pscale_pw_wgSR9qvrai9ad3quGpz6eVZOiXQyqtyJEJyrHf2aSoE@aws.connect.psdb.cloud/apdev-next?sslaccept=strict'
+DATABASE_URL='mysql://ml4apc6j3xps7y6wvm4e:pscale_pw_LkW71hmhv09V2rLjghICcJHGxgb3uGymwWEnhHhI10N@aws.connect.psdb.cloud/apdev-next?sslaccept=strict'
 NEXTAUTH_SECRET=mysecret
 
 GOOGLE_CLIENT_ID=332872778127-cqababnd67spr4list5536giunc8qeog.apps.googleusercontent.com
